--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "formik": "^2.2.9",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-flash-message": "^0.2.1",
     "react-native-image-picker": "^4.8.4",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
